Added example showing how to custom event handler and processor