@@ -16,7 +16,14 @@
 
 package com.github.ibole.data.sensor.exporter.yaml;
 
+import com.github.ibole.data.sensor.common.handler.RuntimeData;
+import com.github.ibole.data.sensor.common.model.canal.DbColumn;
+import com.github.ibole.data.sensor.common.model.canal.DbRow;
+import com.github.ibole.data.sensor.common.model.canal.DbTable;
+import com.github.ibole.data.sensor.common.model.canal.EventType;
 import com.github.ibole.data.sensor.exporter.pipeline.Pipeline;
+
+import com.google.common.collect.Lists;
 
 import java.util.List;
 
@@ -38,8 +45,54 @@ public class Test {
 	 * @param args
 	 */
 	public static void main(String[] args) {
+		
+		DbTable dbTable = new DbTable("AMNT_MatchingRule");
+		dbTable.setEventType(EventType.UPDATE);
+		List<DbRow> rows = Lists.newArrayList();
+		DbRow row1 = new DbRow();
+		DbRow row2 = new DbRow();
+		
+		List<DbColumn> columns1 = Lists.newArrayList();
+		
+		DbColumn column11 = new DbColumn();
+		column11.setName("id");
+		column11.setValue("2222");
+		column11.setMysqlType("bigint");
+		
+		DbColumn column12 = new DbColumn();
+		column12.setName("userName");
+		column12.setMysqlType("varchar");
+		column12.setValue("bwang");
+		columns1.add(column11);
+		columns1.add(column12);
+		
+		
+		List<DbColumn> columns2 = Lists.newArrayList();
+		
+		DbColumn column21 = new DbColumn();
+		column21.setName("id");
+		column21.setValue("2223");
+		column21.setMysqlType("bigint");
+		
+		DbColumn column22 = new DbColumn();
+		column22.setName("userName");
+		column22.setMysqlType("varchar");
+		column22.setValue("bwang1");
+		columns2.add(column21);
+		columns2.add(column22);
+		
+		row1.setColumn(columns1);
+		row2.setColumn(columns2);
+		
+		rows.add(row1);
+		rows.add(row2);
+		dbTable.setRows(rows);
+		
+		RuntimeData runtimeData = new RuntimeData();
+		runtimeData.setDbTable(dbTable);
+		
 		List<Pipeline> pipelines = ConfigurationLoader.loadPipelines();
-		pipelines.get(0);
+		pipelines.get(0).getFirst().process(runtimeData);
 	}
 
 }
